// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments can be created with bare minimum 1`] = `
{
  "data": {
    "addComment": {
      "id": Any<String>,
      "itemID": Any<String>,
      "itemType": "article",
      "parentID": null,
      "state": "approved",
      "text": Any<Object>,
      "user": Any<Object>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Comments create authorize permissions Public: comment from a user with approval permission is approved 1`] = `
{
  "data": {
    "addComment": {
      "id": Any<String>,
      "itemID": "d",
      "itemType": "article",
      "parentID": null,
      "state": "approved",
      "text": [
        {
          "children": [
            {
              "text": "hello",
            },
          ],
          "type": "paragraph",
        },
      ],
      "user": {
        "id": "authorizedUser",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Comments create authorize permissions Public: comment from a user without approval permission is pending approval 1`] = `
{
  "data": {
    "addComment": {
      "id": Any<String>,
      "itemID": "d",
      "itemType": "article",
      "parentID": null,
      "state": "pendingApproval",
      "text": [
        {
          "children": [
            {
              "text": "hello",
            },
          ],
          "type": "paragraph",
        },
      ],
      "user": {
        "id": "unauthorizedUser",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Comments create authorize permissions comment from a user with approval permission is approved 1`] = `
{
  "data": {
    "createComment": {
      "createdAt": Any<Date>,
      "featured": false,
      "guestUserImage": null,
      "guestUsername": null,
      "id": Any<String>,
      "itemID": "d",
      "itemType": "article",
      "modifiedAt": Any<Date>,
      "overriddenRatings": null,
      "parentComment": null,
      "rejectionReason": null,
      "revisions": ArrayContaining [
        ObjectContaining {
          "createdAt": Any<Date>,
        },
      ],
      "source": null,
      "state": "approved",
      "tags": [],
      "user": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Comments create authorize permissions comment from a user without approval permission is pending approval 1`] = `
{
  "data": {
    "createComment": {
      "createdAt": Any<Date>,
      "featured": false,
      "guestUserImage": null,
      "guestUsername": null,
      "id": Any<String>,
      "itemID": "d",
      "itemType": "article",
      "modifiedAt": Any<Date>,
      "overriddenRatings": null,
      "parentComment": null,
      "rejectionReason": null,
      "revisions": ArrayContaining [
        ObjectContaining {
          "createdAt": Any<Date>,
        },
      ],
      "source": null,
      "state": "pendingApproval",
      "tags": [],
      "user": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Comments create can be created 1`] = `
{
  "data": {
    "createComment": {
      "createdAt": Any<Date>,
      "featured": false,
      "guestUserImage": null,
      "guestUsername": null,
      "id": Any<String>,
      "itemID": "d",
      "itemType": "article",
      "modifiedAt": Any<Date>,
      "overriddenRatings": null,
      "parentComment": null,
      "rejectionReason": null,
      "revisions": ArrayContaining [
        ObjectContaining {
          "createdAt": Any<Date>,
        },
      ],
      "source": null,
      "state": "approved",
      "tags": [],
      "user": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`Comments sensitive data of the user associated with the comment is hidden if the user is not me 1`] = `
{
  "email": "",
  "firstName": "Bruce",
  "flair": "Superhero",
  "id": Any<String>,
  "image": null,
  "name": "Wayne",
  "preferredName": "Batman",
}
`;
